# ROS_navfn_verification

./: README.md  index.html  run_simulation.sh
coverage/: index.html  style.css
coverage/coverage/: navfn.cpp.html
coverage/gcov/: covreport.functions.html  covreport.navfn.cpp.8f191be13086aa1ac2123d76024a7745.html  index.html
maude/: astar-perf.maude  astar.maude
maude_planner/: amcl_pose_dummy.py  planner_action_server.py  profile_maude.py  profile_ros.py
maude_planner2/: package.xml  setup.cfg  setup.py
maude_planner2/maude_planner/: astar.maude  planner_action_server.py
pubsub_maude_ros/: README.md  launch_maudeROS2.py
pubsub_maude_ros/pubsub_maude_ros/: publisher.py  subscriber.py
pubsub_ros/: launch_maudeROS2.py  package.xml  setup.cfg  setup.py
pubsub_ros/pubsub_ros/: publisher.py  subscriber.py
src/: Dockerfile  nav2_params.yaml  run_simulation.sh
src/dafny/: astar.dfy  astar_disjointness.dfy  astar_navfnplanner.dfy  astar_navfnplanner_fixed.dfy  generate-go.sh
src/fixed-ros/: README.md  avoidObstacles.patch
src/maude/: README.md  astar-perf.maude  astar.maude  astar_navfnplanner.maude  astar_no_turn.maude  astar_no_turnNavFnPlanner.maude  astar_no_turnNavFnPlanner_rew.maude  astar_no_turnNavFnPlanner_strat.maude  astar_no_turn_rew.maude  common.maude
src/maude_planner/: compare.py  count_tests.sh  debug_ros.py  gen_tests.py  launch_tests.sh  map_dummy.py  modelcheck.py  planner_action_server.py  profile_cpp.cc  profile_cpp_cases.txt  profile_maude.py  show_map.py  test_one.sh  white_box  white_box.py
src_bak/: nav2_params.yaml
(+471 files in other folders)
